app/src/main/java/com/example/fail/Clouds.kt
package com.example.fail

data class Clouds(
    val all: Int
)